refactor replace role-based access with permission-based system (issue #32)